stop horizontal scroll in mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   @apply text-gray-800;
